--- a/CardDeck/CardDeck/Base.lproj/Main.storyboard
+++ b/CardDeck/CardDeck/Base.lproj/Main.storyboard
@@ -21,6 +21,11 @@
                             <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bes-R1-gCy" customClass="PlayingCardView" customModule="CardDeck" customModuleProvider="target">
                                 <rect key="frame" x="16" y="36" width="343" height="615"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="rank">
+                                        <integer key="value" value="11"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.70703035000000003" blue="0.24550513700000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
